5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1837_2221.log
== TEST (2019-07-01 21:35:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(4,dtype=float)
for i in range(shape(mat)[0]):
	for j in range(sahpe(mat)[1])
		if mat[i]==min[i]:
			vet[i]=[mat[i,j]]
print(vet)
-- ERROR:
File "XXXX", line 7
    for j in range(sahpe(mat)[1])
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:36:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(4,dtype=float)
for i in range(shape(mat)[0]):
	for j in range(sahpe(mat)[1]):
		if mat[i]==min[i]:
			vet[i]=[mat[i,j]]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:36:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(4,dtype=float)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if mat[i]==min[i]:
			vet[i]=[mat[i,j]]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:37:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(4,dtype=float)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if mat[i:j]==min[i]:
			vet[i]=[mat[i,j]]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:37:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(4,dtype=float)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if mat[i:j]==min[i:j]:
			vet[i]=[mat[i,j]]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:39:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(4,dtype=float)
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	vet[j] = min(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:39:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(4,dtype=float)
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	vet[j] = min(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:41:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 

vet = zeros(shape(mat)[1],dtype=float)

for j in range(shape(mat)[0]):
	x = (mat[j,:])
	vet[j] = min(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:41:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

vet = zeros(shape(mat)[1],dtype=float)

for j in range(shape(mat)[0]):
	x = (mat[j,:])
	vet[j] = min(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:42:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:42:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:42:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:42:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:43:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(a/shape(mat)[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:43:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(a/shape(mat)[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:44:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(round(a/shape(mat)[0]),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:44:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(round(a/shape(mat)[0]), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:45:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(round(a/shape(mat)[0], 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:45:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat =array(eval(input("digite: "))) 

a = 0
for j in range(shape(mat)[0]):
	x = (mat[j,:])
	a += min(x)
print(round(a/shape(mat)[0], 2))
-- EXECUTION TIME:
0.988726
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
